Fix some typos. Minor changes to current status.

--- a/trunk/doc/pubdesign/llnl.tex
+++ b/trunk/doc/pubdesign/llnl.tex
@@ -4,7 +4,7 @@
 \usepackage{hhline}
 
 \author{Moe Jette \and Mark Grondona\\
- 	\{jette,mgrondona\}@llnl.gov} 
+ 	\{jette1,mgrondona\}@llnl.gov} 
 \title{SLURM: Simple Linux Utility for Resource Management}
 
 
