--- a/trunk/doc/pubdesign/llnl.tex
+++ b/trunk/doc/pubdesign/llnl.tex
@@ -3,8 +3,11 @@
 \usepackage{epsfig}
 \usepackage{hhline}
 
-\author{Moe Jette \and Mark Grondona\\
- 	\{jette1,mgrondona\}@llnl.gov} 
+\author{Moe Jette \and Mark Grondona}
+
+% We cheat here to easily get the desired allignment 
+\date{\{jette1,mgrondona\}@llnl.gov}
+
 \title{SLURM: Simple Linux Utility for Resource Management}
 
 
