Change name on paper from "Moe" to "Morris".

--- a/trunk/doc/pubdesign/llnl.tex
+++ b/trunk/doc/pubdesign/llnl.tex
@@ -3,7 +3,7 @@
 \usepackage{epsfig}
 \usepackage{hhline}
 
-\author{Moe Jette \and Mark Grondona}
+\author{Morris Jette \and Mark Grondona}
 
 % We cheat here to easily get the desired allignment 
 \date{\{jette1,mgrondona\}@llnl.gov}
@@ -132,7 +132,7 @@
 \put(60, 280)
 {
   \makebox(0,0)[tl]{\Large 
-\parbox{300pt}{\textit{Moe Jette and Mark Grondona}}}
+\parbox{300pt}{\textit{Morris Jette and Mark Grondona}}}
 
 }
 
