--- a/trunk/doc/man/man3/slurm_reconfigure.3
+++ b/trunk/doc/man/man3/slurm_reconfigure.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "January 2003" "Morris Jette" "Slurm administrative calls"
+.TH "Slurm API" "3" "February 2003" "Morris Jette" "Slurm administrative calls"
 .SH "NAME"
 slurm_init_part_desc_msg,
 slurm_reconfigure, slurm_shutdown, slurm_update_job, 
@@ -74,7 +74,9 @@ values of the parameters to be changed. Note: \fBslurm_init_job_desc_msg\fR is n
 equivalent to setting the data structure values to zero. This function may only be 
 successfully executed by user root.
 .LP 
-\fBslurm_update_node\fR Request that the state of one or more nodes be updated. Note that the state of a node (e.g. DRAINING, IDLE, etc.) may be changed, but its hardware configuration may not be changed by this function. If the hardware configuration of a node changes, update the Slurm configuration file and execute the \fBslurm_reconfigure\fR function. This function may only be successfully executed by user root.
+\fBslurm_update_node\fR Request that the state of one or more nodes be updated. Note that the state of a node (e.g. DRAINING, IDLE, etc.) may be changed, but its hardware configuration may not be changed by this function. If the hardware configuration of a node changes, update the Slurm configuration file and execute the \fBslurm_reconfigure\fR function. This function may only be successfully executed by user root. The node state flag \fBNODE_STATE_NO_RESPOND\fR may be 
+specified without changing the underlying node state. This might be used by some external 
+system monitoring tool to inform the Slurm controller that a node has become unusable.
 .LP 
 \fBslurm_update_part\fR Request that the configuration of a partition be updated. 
 Note that most, but not all parameters of a partition may be changed by this function. 
