--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -1,6 +1,6 @@
 \." $Id$
 .\"
-.TH SRUN "1" "January 2003" "srun 0.1" "slurm components"
+.TH SRUN "1" "March 2003" "srun 0.1" "slurm components"
 .SH "NAME"
 srun \- run parallel jobs
 .SH SYNOPSIS
@@ -48,6 +48,9 @@ are created by the slurm administrator.
 .TP
 \fB\-t\fR, \fB\-\-time\fR=\fIminutes\fR
 Establish a time limit to terminate the job after the specified number of minutes.
+The default value is the partition's time limit. When the time limit is reached, 
+the job's processes are sent SIGXCPU followed by SIGKILL. The interval between 
+signals is specified by the SLURM configuration parameter \fBKillWait\fR.
 .TP
 \fB\-\-cddir\fR=\fIpath\fR
 have the remote processes do a chdir to \fIpath\fR before beginning
@@ -321,7 +324,7 @@ stdin is redirected from the stdin of
 .B srun
 to this same task.
 .TP
-filename
+\fIfilename\fR
 .B srun
 will redirect stdout and/or stderr to the named file from all tasks.
 stdin will be redirected from the named file and broadcast to all
@@ -566,4 +569,4 @@ processors on the same node.  The \fBnodes\fR and \fBmincpus\fR options
 may be helpful in preventing this problem. 
 
 .SH "SEE ALSO"
-\fBscancel\fR(1), \fBsqueue\fR(1)
+\fBscancel\fR(1), \fBscontrol\fR(1), \fBsqueue\fR(1), \fBslurm.conf\fR(5)
